--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Sunrise|Sunset</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:700|Raleway:600" rel="stylesheet">
     <style>
       body {
         margin: 0;
