Styling in prep to make Sun movable manually

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sunrise|Sunset</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:700|Raleway:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:700|Raleway:200+600" rel="stylesheet">
     <style>
       body {
         margin: 0;
