--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://res.cloudinary.com/da2iq7dge/image/upload/c_limit,h_400,w_500/v1493333561/benjaminj6.github.io-horizon-_11_js4paw.png" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image:width" content="500" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image:width" content="400" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Horizon</title>
