--- a/menu.html
+++ b/menu.html
@@ -21,9 +21,17 @@
       justify-content: center;
     }
 
+    a {
+      text-decoration: none;
+    }
+
     h1, h2, h3, h4, h5, h6 {
       margin: 0;
       line-height: 1.5;
+    }
+
+    h2 {
+      margin-bottom: 1rem;
     }
 
     header {
@@ -67,24 +75,23 @@
       justify-content: center;
       align-items: center;
       border-radius: 50%;
+      font-style: normal;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>horizon</h1>
-    <i>X</i>
+    <i><a href="/main.html">◼️</a></i>
   </header>
 
-  <h1 class="time">9:56:09</h1>
-  <h3>until sunset</h3>
+  <section>
+    <h2>like what you see? view the source code, technologies used, and other fun things on <a href="">github</a>.</h2>
+  </section>
 
   <footer>
-    <div class="icon">
-      <i>$</i>
-    </div>
-    <h4>made with ❤️ by <a href="portfolio">benjamin johnson</a></h4>
-    <h6>attribution to the <a href="">api</a>, <a href="">icons</a>, stuff like that.</h6>
+      <h3>made with ❤️ by <a href="portfolio">benjamin johnson</a></h3>
+      <h6>attribution to the <a href="">api</a>, <a href="">icons</a>, stuff like that.</h6>
   </footer>
 </body>
 </html>
