--- a/menu.html
+++ b/menu.html
@@ -30,8 +30,25 @@
       line-height: 1.5;
     }
 
+    h1 {
+      font-size: 2rem;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+    }
     h2 {
       margin-bottom: 1rem;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      text-align: center;
+    }
+
+    li + li {
+      margin-top: 2rem;
     }
 
     header {
@@ -81,17 +98,22 @@
 </head>
 <body>
   <header>
-    <h1>horizon</h1>
     <i><a href="/main.html">◼️</a></i>
   </header>
 
   <section>
-    <h2>like what you see? view the source code, technologies used, and other fun things on <a href="">github</a>.</h2>
-  </section>
+      <ul>
+        <li>
+          <h2>view on <a href="">github</a></h2>
+        </li>
+        <li>
+          <h2>made with ❤️ by <a href="portfolio">benjamin johnson</a></h2>
+        </li>
+      </ul>
+    </section>
 
-  <footer>
-      <h3>made with ❤️ by <a href="portfolio">benjamin johnson</a></h3>
-      <h6>attribution to the <a href="">api</a>, <a href="">icons</a>, stuff like that.</h6>
+    <footer>
+      <h4>attribution to the <a href="">api</a>, <a href="">icons</a>, stuff like that.</h4>
   </footer>
 </body>
 </html>
